--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +16,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="ico/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="ico/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="ico/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="ico/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="ico/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
@@ -24,18 +25,21 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- fontawesome link here -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- style link here -->
     <link rel="stylesheet" href="css/style.css">
-    
+
 </head>
+
 <body>
     <header class="header">
         <input type="checkbox" name="" id="toggler">
         <label for="toggler" class="fas fa-bars"></label>
         <div class="logo">
-            <img src="images/logo.png" alt="">
+            <a href="#home">Moodiify</a>
         </div>
         <nav class="navbar">
             <a href="#home">home</a>
@@ -45,21 +49,24 @@
             <a href="#before">media</a>
         </nav>
         <div class="icons">
-            <a class="contact-btn" href="https://api.whatsapp.com/send/?phone=6287824371308&text&type=phone_number&app_absent=0" target="_blank">contact us</a>
+            <a class="contact-btn"
+                href="https://api.whatsapp.com/send/?phone=6287824371308&text&type=phone_number&app_absent=0"
+                target="_blank">contact us</a>
         </div>
     </header>
     <div class="home" id="home">
         <div class="main-home">
             <div class="home-inner-content">
                 <div class="home-image">
-                <img src="images/background content.png" alt="">
+                    <img src="images/background content.png" alt="">
                 </div>
             </div>
             <div class="home-inner-content">
                 <div class="home-text-content">
-                <h1>contact us for best<br>gelato & pastry</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, voluptatem officiis quas illum pariatur, sint amet dignissimos asperiores</p>
-                <a href="#menu">Check Menu</a>
+                    <h1>contact us for best<br>gelato & pastry</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, voluptatem officiis quas
+                        illum pariatur, sint amet dignissimos asperiores</p>
+                    <a href="#menu">Check Menu</a>
                 </div>
             </div>
         </div>
@@ -77,7 +84,11 @@
                 <div class="about-inner-content">
                     <div class="about-text-content">
                         <h1>About us</h1>
-                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure sunt assumenda quaerat fugiat nesciunt at, provident quae ipsa! Amet explicabo molestiae perspiciatis ut provident mollitia reprehenderit omnis fuga modi voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi nisi doloremque officiis alias similique beatae illum necessitatibus aliquam, hic, digniss</p>
+                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure sunt assumenda quaerat fugiat
+                            nesciunt at, provident quae ipsa! Amet explicabo molestiae perspiciatis ut provident
+                            mollitia reprehenderit omnis fuga modi voluptates. Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Quasi nisi doloremque officiis alias similique beatae illum necessitatibus
+                            aliquam, hic, digniss</p>
                     </div>
                 </div>
             </div>
@@ -89,7 +100,12 @@
             <div class="main-inner-quality">
                 <div class="quality-content">
                     <h1>Our food quality</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam mollitia obcaecati architecto corporis fugit magni molestiae, itaque molestias beatae quas, eveniet nesciunt quia? Molestias, ab error vitae facere quos qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi omnis itaque commodi pariatur quia, minima ullam sunt. Sunt, natus magni laborum ipsam, dolor reprehenderit exercitationem consectetur nesciunt error iure odit! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos qui .</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam mollitia obcaecati architecto
+                        corporis fugit magni molestiae, itaque molestias beatae quas, eveniet nesciunt quia? Molestias,
+                        ab error vitae facere quos qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Excepturi omnis itaque commodi pariatur quia, minima ullam sunt. Sunt, natus magni laborum
+                        ipsam, dolor reprehenderit exercitationem consectetur nesciunt error iure odit! Lorem ipsum
+                        dolor sit, amet consectetur adipisicing elit. Quos qui .</p>
                 </div>
             </div>
             <div class="main-inner-quality">
@@ -138,13 +154,15 @@
         </div>
     </div>
 
-
     <div class="enjoy-our-food">
         <div class="food-main-content">
             <h1>enjoy our food</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa quidem sit nostrum pariatur perferendis soluta saepe nam eveniet velit exercitationem iusto, molestias sapiente laborum? Hic, eaque. Voluptatum sit incidunt ipsa.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa quidem sit nostrum pariatur perferendis
+                soluta saepe nam eveniet velit exercitationem iusto, molestias sapiente laborum? Hic, eaque. Voluptatum
+                sit incidunt ipsa.</p>
         </div>
     </div>
+
 
 
     <div class="our-menu-food" id="menu">
@@ -155,7 +173,9 @@
                     <img src="images/menu2.png" alt="">
                     <div class="menu-food-text">
                         <h2>Fresh Gelato</h2>
-                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur blanditiis quis saepe at, alias mollitia totam beatae ducimus a aperiam ratione? Libero, facilis nam reiciendis quod error laboriosam. Id, at.</p>
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur blanditiis quis saepe at,
+                            alias mollitia totam beatae ducimus a aperiam ratione? Libero, facilis nam reiciendis quod
+                            error laboriosam. Id, at.</p>
                         <p> <span>Price / $10.5</span> </p>
                     </div>
                 </div>
@@ -165,7 +185,9 @@
                     <img src="images/menu1.png" alt="">
                     <div class="menu-food-text">
                         <h2>Fresh Gelato</h2>
-                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, sit! Praesentium modi itaque tempore consectetur odit ex neque facilis hic totam vero nihil corrupti nemo dolore accusamus, ab necessitatibus numquam!</p>
+                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, sit! Praesentium modi
+                            itaque tempore consectetur odit ex neque facilis hic totam vero nihil corrupti nemo dolore
+                            accusamus, ab necessitatibus numquam! lo</p>
                         <p> <span>Price / $10.5</span> </p>
                     </div>
                 </div>
@@ -175,7 +197,9 @@
                     <img src="images/menu3.png" alt="">
                     <div class="menu-food-text">
                         <h2>Fresh Gelato</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, sit! Praesentium modi itaque tempore consectetur odit ex neque facilis hic totam vero nihil corrupti nemo dolore accusamus, ab necessitatibus numquam!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, sit! Praesentium modi
+                            itaque tempore consectetur odit ex neque facilis hic totam vero nihil corrupti nemo dolore
+                            accusamus, ab necessitatibus numquam!</p>
                         <p> <span>Price / $10.5</span> </p>
                     </div>
                 </div>
@@ -185,7 +209,9 @@
                     <img src="images/menu2.png" alt="">
                     <div class="menu-food-text">
                         <h2>Fresh Gelato</h2>
-                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, sit! Praesentium modi itaque tempore consectetur odit ex neque facilis hic totam vero nihil corrupti nemo dolore accusamus, ab necessitatibus numquam!</p>
+                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, sit! Praesentium modi
+                            itaque tempore consectetur odit ex neque facilis hic totam vero nihil corrupti nemo dolore
+                            accusamus, ab necessitatibus numquam!</p>
                         <p> <span>Price / $10.5</span> </p>
                     </div>
                 </div>
@@ -195,7 +221,9 @@
                     <img src="images/menu1.png" alt="">
                     <div class="menu-food-text">
                         <h2>Fresh Gelato</h2>
-                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, sit! Praesentium modi itaque tempore consectetur odit ex neque facilis hic totam vero nihil corrupti nemo dolore accusamus, ab necessitatibus numquam!</p>
+                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, sit! Praesentium modi
+                            itaque tempore consectetur odit ex neque facilis hic totam vero nihil corrupti nemo dolore
+                            accusamus, ab necessitatibus numquam!</p>
                         <p> <span>Price / $10.5</span> </p>
                     </div>
                 </div>
@@ -205,7 +233,9 @@
                     <img src="images/menu3.png" alt="">
                     <div class="menu-food-text">
                         <h2>Fresh Gelato</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, sit! Praesentium modi itaque tempore consectetur odit ex neque facilis hic totam vero nihil corrupti nemo dolore accusamus, ab necessitatibus numquam!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, sit! Praesentium modi
+                            itaque tempore consectetur odit ex neque facilis hic totam vero nihil corrupti nemo dolore
+                            accusamus, ab necessitatibus numquam!</p>
                         <p> <span>Price / $10.5</span> </p>
                     </div>
                 </div>
@@ -225,11 +255,17 @@
                 <div class="before-inner-content">
                     <div class="before-text-content">
                         <h1>follow our social media</h1>
-                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure sunt assumenda quaerat fugiat nesciunt at, provident quae ipsa! Amet explicabo molestiae perspiciatis ut provident mollitia reprehenderit omnis fuga modi voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi nisi doloremque officiis alias similique beatae illum necessitatibus aliquam, hic, digniss</p>
+                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure sunt assumenda quaerat fugiat
+                            nesciunt at, provident quae ipsa! Amet explicabo molestiae perspiciatis ut provident
+                            mollitia reprehenderit omnis fuga modi voluptates. Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Quasi nisi doloremque officiis alias similique beatae illum necessitatibus
+                            aliquam, hic, digniss</p>
                     </div>
                     <div class="social-icon">
-                        <a href="https://www.instagram.com/moodiify.gelato/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://api.whatsapp.com/send/?phone=6287824371308&text&type=phone_number&app_absent=0" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://www.instagram.com/moodiify.gelato/" target="_blank"><i
+                                class="fa-brands fa-instagram"></i></a>
+                        <a href="https://api.whatsapp.com/send/?phone=6287824371308&text&type=phone_number&app_absent=0"
+                            target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                         <a href="https://www.tiktok.com/id-ID/" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
                         <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
                     </div>
@@ -248,15 +284,15 @@
             <a href="#menu">menu</a>
             <a href="#before">media</a>
         </footernav>
-        <p>Copyright © 2023. Designed by | <a href="https://sakabayul.github.io/" target="_blank">WebDeveloper-EFM</a></p>
+        <p>Copyright © 2023. Design by | <a href="https://sakabayul.github.io/" target="_blank">Saka Bayu</a></p>
     </div>
 
-<!-- scroll reveal javascript link -->
-<script src="https://unpkg.com/scrollreveal"></script>
 
-<!-- javascript link here -->
-<script src="js/script.js"></script>
-<script src="js/navbar.js"></script>
-</script>
+    <!-- scroll reveal javascript link -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- javascript link here -->
+    <script src="js/script.js"></script>
+    <script src="js/navbar.js"></script>
 </body>
+
 </html>
