--- a/index.html
+++ b/index.html
@@ -277,14 +277,21 @@
 
 
     <div class="footer">
-        <footernav class="footer-navbar">
-            <a href="#home">home</a>
-            <a href="#about">about</a>
-            <a href="#gallery">gallery</a>
-            <a href="#menu">menu</a>
-            <a href="#before">media</a>
-        </footernav>
-        <p>Copyright © 2023. Design by | <a href="https://sakabayul.github.io/" target="_blank">Saka Bayu</a></p>
+        <img src="images/background content.png" alt="">
+        <div class="footer-nav">
+            <footernav class="footer-navbar">
+                <a href="#home">home</a>
+                |
+                <a href="#about">about</a>
+                |
+                <a href="#gallery">gallery</a>
+                |
+                <a href="#menu">menu</a>
+                |
+                <a href="#before">media</a>
+            </footernav>
+            <p>Copyright © 2023. Design by |<a href="https://sakabayul.github.io/" target="_blank"> Saka Bayu</a></p>
+        </div>
     </div>
 
 
@@ -292,7 +299,6 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- javascript link here -->
     <script src="js/script.js"></script>
-    <script src="js/navbar.js"></script>
 </body>
 
 </html>
